# en-croissant

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src/: App.tsx  vitest.setup.ts
src-tauri/: Cargo.toml
src-tauri/src/: chess.rs  error.rs  game.rs  lexer.rs  main.rs  oauth.rs  opening.rs  puzzle.rs  sound.rs
src-tauri/src/db/: delete_indexes.sql  indexes.sql  mod.rs  search.rs
src-tauri/src/engine/: uci.rs
src/bindings/: generated.ts
src/chessground/: Chessground.test.ts  Chessground.tsx
src/components/boards/: Board.tsx  BoardGame.tsx  Clock.tsx  EvalListener.tsx
src/components/common/: CompleteMoveCell.tsx  EvalChart.tsx  GameNotation.tsx
src/components/databases/: GameTable.tsx  PlayerSearchInput.tsx  PlayerTable.tsx
src/components/engines/: AddEngine.tsx  EngineForm.tsx  EnginesPage.tsx
src/components/home/: Databases.tsx
src/components/panels/analysis/: BestMoves.tsx
src/components/panels/annotation/: AnnotationPanel.tsx
src/components/panels/database/: DatabasePanel.tsx
src/components/panels/database/options/: LocalOptionsPanel.tsx
src/components/puzzles/: AddPuzzle.tsx  PuzzleBoard.tsx
src/components/tabs/: BoardsPage.tsx
src/state/: atoms.ts  clockStore.ts  utils.ts
src/styles/: Chessboard.module.css  chessgroundBaseOverride.css  chessgroundColorsOverride.css  global.css
src/utils/: engines.ts  performance.ts
src/utils/tests/: chessops.test.ts
