[package]
name = "en-croissant"
version = "0.15.0"
description = "A Modern Chess Database"
authors = ["Francisco Salgueiro <fgcdbs@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/franciscoBSalgueiro/en-croissant"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11", features = ["protocol-asset"] }
zip = "8"
tokio = { version = "1.52", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.13", features = ["stream", "blocking", "json"] }
shakmaty = "=0.30.0"
pgn-reader = "0.26"
csv = "1.4"
lazy_static = "1.5"
btoi = "0.5"
rusqlite = { version = "0.33", features = ["bundled"] }
bzip2 = "0.6"
zstd = "0.13"
diesel = { version = "2.3", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
rayon = "1.10"
chrono = "0.4"
derivative = "2.2"
dashmap = "6.2"
once_cell = "1.21"
rand = "0.10"
vampirc-uci = { git = "https://github.com/franciscoBSalgueiro/vampirc-uci", rev = "0d2b70d1e9cc6fb2159717a7252e1e080c25bd53", features = [
    "specta",
    "serde",
] }
tempfile = "3.27"
specta = { version = "2.0.0-rc.25", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
strsim = "0.11"
thiserror = "2"
log = "0.4"
oauth2 = "4.4"
axum = "0.8"
tar = "0.4"
sysinfo = "0.38"
governor = "0.10"
nonzero_ext = "0.3"
specta-typescript = "0.0.12"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-cli = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-opener = "2"
memmap2 = "0.9"
rkyv = { version = "0.8", features = ["bytecheck"] }
polyglot-book-rs = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
